[gd_scene load_steps=7 format=2]

[ext_resource path="res://Components/Weapons/WeaponSkin/WeaponBaseSkin.gd" type="Script" id=1]
[ext_resource path="res://Components/Weapons/WeaponSkin/StockSkins/MarineGunStock.tscn" type="PackedScene" id=2]
[ext_resource path="res://Components/Weapons/WeaponSkin/AmmoSkins/MarineGunAmmo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Components/Weapons/WeaponSkin/TriggerSkins/MarineGunTrigger.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/Weapons/WeaponSkin/BarrelSkins/MarineGunBarrel.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Weapons/MarineGun/Marine_gun.png" type="Texture" id=6]

[node name="TestBase" type="Sprite"]
self_modulate = Color( 0.8, 0.14902, 0.956863, 1 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 83, 24, 25, 16 )
script = ExtResource( 1 )

[node name="StockPos" type="Position2D" parent="."]
position = Vector2( -13, 0 )

[node name="MarineGunStock" parent="StockPos" instance=ExtResource( 2 )]

[node name="TriggerPos" type="Position2D" parent="."]
position = Vector2( -10, 5 )

[node name="MarineGunTrigger" parent="TriggerPos" instance=ExtResource( 4 )]

[node name="AmmoPos" type="Position2D" parent="."]
position = Vector2( 3, 5 )

[node name="MarineGunAmmo" parent="AmmoPos" instance=ExtResource( 3 )]

[node name="BarrelPos" type="Position2D" parent="."]
position = Vector2( 12, -1 )

[node name="MarineGunBarrel" parent="BarrelPos" instance=ExtResource( 5 )]
